--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^1.1.4",
     "animate.css": "^4.1.1",
     "axios": "^0.27.2",
     "element-plus": "^2.1.11",
